# Embedded_INC

./: CMakeLists.txt  LICENSE  README.md  library.cpp  library.h
data_link/: CMakeLists.txt
data_link/framitization/: Frame.cpp  Frame.h  Framer.cpp  Framer.h
physical_interface/: CMakeLists.txt  Physical.cpp  Physical.h
physical_interface/loopback/: loopback.cpp  loopback.h
physical_interface/serial_interface/: serial.cpp  serial.h
test/functional/: CMakeLists.txt
test/functional/physical_interface/: demo_physical.cpp
test/unit/: CMakeLists.txt
test/unit/physical_interface/: Physical.cpp
utils/: Errors.h
